--- a/src/Components/Category/Category.module.css
+++ b/src/Components/Category/Category.module.css
@@ -2,7 +2,7 @@
     width: 148px;
     height: 48px;
     padding: 14px 24px;
-    background-color: #E2D4F0;;
+    background-color: #E2D4F0;
     border: none;
     border-radius: 14px;
     color: black;
@@ -10,7 +10,7 @@
     margin-right: 14px;
 }
 
-.btn_categories:hover{
+.btn_categories:hover, .btn_categories:focus{
     background-color: #7126B5;
     color: white;
 }
