--- a/src/Components/Form Akun/Form_akun.module.css
+++ b/src/Components/Form Akun/Form_akun.module.css
@@ -6,6 +6,11 @@
     text-align: center;
     font-size: 16px;
 }
+.fa-arrow-left {
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+}
 
 .btn_primary {
     width: 100%;
