--- a/src/Components/Form Produk/Form_produk.module.css
+++ b/src/Components/Form Produk/Form_produk.module.css
@@ -7,6 +7,12 @@
     font-size: 16px;
 }
 
+.fa-arrow-left {
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+}
+
 .form_produk {
     height: 100%;
     width: 100%;
