--- a/src/Pages/Homepage/Homepage.module.css
+++ b/src/Pages/Homepage/Homepage.module.css
@@ -14,6 +14,7 @@
 
 .btn_primary:hover{
     color: white;
+    background-color: #7126B5;
 }
 
 .title-category {
@@ -35,6 +36,7 @@
 
 .btn_small:hover {
     color: #fff !important;
+    background-color: #7126B5;
     text-decoration: none;
 }
 
