--- a/src/Components/Navbar/SecondaryNavbar.module.css
+++ b/src/Components/Navbar/SecondaryNavbar.module.css
@@ -19,3 +19,13 @@
 .icons-menu:hover{
     color: #7126B5;
 }
+
+button:focus,
+button:active,
+.icons-menu:active,
+.icons-menu.active
+{
+    outline: 0px !important;
+    -webkit-appearance:none;
+    box-shadow: none !important;
+}
