--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -8,7 +8,7 @@
 }
 
 .signin_img{
-    width: 720px;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     transform: translateX(-5%);
@@ -37,6 +37,51 @@
     }
 }
 
+@media (max-width: 768px) {
+    .signin_img {
+        display: none;
+    }
+    .signin-container {
+        display: flex;
+        justify-content: center;
+    }
+    .signin_form {
+        padding-top: 45px;
+        margin-top: 16px;
+    }
+    .signin_text {
+        position: absolute;
+        bottom: 20px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+    }
+}
+
+@media (max-width: 992px) { 
+    .signin_img {
+        display: none;
+    }
+    .signin-container {
+        display: flex;
+        justify-content: center;
+    }
+    .signin_form {
+        padding-top: 45px;
+        margin-top: 16px;
+    }
+    .signin_text {
+        position: absolute;
+        bottom: 20px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+    }
+}
 
 .fa-arrow-left {
     font-size: 16px;
@@ -57,6 +102,15 @@
     line-height: 36px;
 }
 
+.signin_text {
+    bottom: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
 .signin-field {
     border: 1px solid #D0D0D0;
     border-radius: 14px;
@@ -74,8 +128,7 @@
 }
 
 .btn_primary:hover{
-    background-color: #7126B5;
-    color: white;
+    color: #E2D4F0;
 }
 
 .redirect-text {
@@ -83,6 +136,15 @@
     color: #7126B5;
     font-weight: bolder;
     text-align: center;
+}
+
+.redirect-text:hover {
+    color: #7126B5;
+}
+
+.btn_primary:hover{
+    background-color: #7126B5;
+    color: #E2D4F0;
 }
 
 /* END OF SIGN IN */
