--- a/src/Components/Navbar/SecondaryNavbar.module.css
+++ b/src/Components/Navbar/SecondaryNavbar.module.css
@@ -18,12 +18,16 @@
 
 .icons-menu:hover{
     color: #7126B5;
+    border-color: white;
 }
 
 button:focus,
 button:active,
 .icons-menu:active,
 .icons-menu.active
+label:focus,
+.icons-menu:active,
+.icons-menu:active
 {
     outline: 0px !important;
     -webkit-appearance:none;
