--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -1,7 +1,3 @@
-* {
-    font-family: 'Poppins';
-}
-
 /* SIGN IN */
 .signin {
     width: 100%;
@@ -128,6 +124,7 @@
 }
 
 .btn_primary:hover{
+    background-color: #7126B5;
     color: #E2D4F0;
 }
 
