--- a/src/Components/FormProduk/FormProduk.module.css
+++ b/src/Components/FormProduk/FormProduk.module.css
@@ -66,6 +66,13 @@ option[value=""][disabled] {
     width: auto;
 }
 
+.icon_cross {
+    top: 0;
+    right:0;
+    padding: 5px;
+
+}
+
 @media (max-width: 576px) { 
     .btn_preview {
         width: 48%;
@@ -73,5 +80,11 @@ option[value=""][disabled] {
     
     .btn_terbitkan {
         width: 46%;
+    }
+
+    .icon_cross {
+        top: 0;
+        right:20px;
+        padding: 5px;
     }
 }
