--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,7 +1,6 @@
-.header {
+.nav-header {
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-    margin-bottom: 32px;
 }
 
 .search-bar {
@@ -25,8 +24,37 @@
     background-color: #7126B5;
 }
 
+.icons-menu:hover{
+    color: #7126B5;
+    border-color: white;
+}
+
+.logout-btn {
+    width: 100%;
+    background-color: #E2D4F0;
+    border: none;
+    border-radius: 12px;
+    color: black;
+    font-size: 12px;
+    height: 39px;
+}
+
+.logout-btn:hover{
+    color: white;
+    background-color: #7126B5;
+}
+
+a {
+    text-decoration: none;
+}
 
 .fa-sign-in-alt {
     font-size: 18px;
     padding-right: 8px;
+}
+
+ @media (max-width: 767.9px) { 
+    .logo-img {
+        display: none;
+    }
 }
