--- a/src/Components/Navbar/SecondaryNavbar.module.css
+++ b/src/Components/Navbar/SecondaryNavbar.module.css
@@ -1,7 +1,6 @@
-.header {
+.nav-header {
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-    margin-bottom: 32px;
 }
 
 .search-bar {
@@ -21,15 +20,58 @@
     border-color: white;
 }
 
+.btn_primary {
+    width: 100%;
+    background-color: #7126B5;
+    border: none;
+    border-radius: 12px;
+    color: white;
+    font-size: 12px;
+    height: 39px;
+}
+
+.logout-btn {
+    width: 100%;
+    background-color: #E2D4F0;
+    border: none;
+    border-radius: 12px;
+    color: black;
+    font-size: 12px;
+    height: 39px;
+}
+
+.logout-btn:hover{
+    color: white;
+    background-color: #7126B5;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn_primary:hover{
+    color: white;
+    background-color: #7126B5;
+}
+
 button:focus,
 button:active,
 .icons-menu:active,
 .icons-menu.active
-label:focus,
-.icons-menu:active,
-.icons-menu:active
 {
     outline: 0px !important;
     -webkit-appearance:none;
     box-shadow: none !important;
+}
+
+.fa-sign-in-alt {
+    font-size: 18px;
+    padding-right: 8px;
+}
+
+@media (max-width: 767.9px) { 
+    .logo-img {
+        display: none;
+    }
+
 }
