--- a/src/Pages/DaftarJual/DaftarJual.module.css
+++ b/src/Pages/DaftarJual/DaftarJual.module.css
@@ -1,3 +1,7 @@
+.daftar-jual {
+    margin-top: 100px;
+}
+
 .profile_wrapper {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
     border-radius: 16px;
