--- a/src/Pages/DetailProduk/DetailProduk.module.css
+++ b/src/Pages/DetailProduk/DetailProduk.module.css
@@ -1,3 +1,15 @@
+@media (min-width: 768px) { 
+    .detail-produk {
+        margin-top: 40px;
+    }
+}
+
+@media (min-width: 1024px) { 
+    .detail-produk {
+        margin-top: 90px;
+    }
+}
+
 .text_detail {
     font-size: 14px;
     color: #8A8A8A;
