--- a/src/Components/Notifikasi/notif.css
+++ b/src/Components/Notifikasi/notif.css
@@ -6,17 +6,30 @@
 }
 .notif-badge{
     padding: 3px;
+    margin-top: 7px;
 }
+
+.header {
+    min-width:200px;
+}
+
 .img-notif{
     border-radius: 10px;
     align-items: center;
     width: 50px;
     height: 50px !important;
+    object-fit: cover;
 }
 .notif-card-desc{
     padding-left: 10px;
 }
 .text-muted {
+    font-size: 10px !important;
+    /* mrgin-botton: 5px; */
+}
+
+.desc-notifdrop{
     font-size: 12px !important;
+    font-webkit: bold;
 }
 /* .text-muted small-notifdrop */
