--- a/src/Components/CardPenawar/CardPenawar.module.css
+++ b/src/Components/CardPenawar/CardPenawar.module.css
@@ -14,10 +14,22 @@
 
 .btn_tolak {
     width: 40%;
-    border: 1px solid #7126B5;
     border-radius: 14px;
     font-size: 14px;
+    border: 1px solid #7126B5;
     height: 48px;
+    background-color: white;
+    transition-duration: .25s;
+}
+
+.btn_tolak:hover, .btn_terima:hover {
+    color: white;
+    opacity: 0.5;
+    background-color:#7126B5;
+}
+
+.btn_tolak:focus {
+    border: 1px solid #7126B5 !important;
 }
 
 .btn_terima {
@@ -25,7 +37,19 @@
     background-color: #7126B5;
     border: none;
     border-radius: 14px;
-    color: white;
+    color: white !important;
     font-size: 14px;
     height: 48px;
+    transition-duration: .25s;
+
+}
+
+/* .btn_terima:hover {
+    color: white;
+    opacity: 0.5;
+    background-color:#7126B5;
+} */
+
+.btn_terima:focus {
+    color: white !important;
 }
