--- a/src/Components/ModalStatus/ModalStatus.module.css
+++ b/src/Components/ModalStatus/ModalStatus.module.css
@@ -5,8 +5,33 @@
     color: white;
     font-size: 14px;
     height: 48px;
+    transition-duration: .25s;
+}
+
+.btn_kirim:hover:enabled {
+    color: white;
+    opacity: 0.5;
+    background-color:#7126B5;
+}
+
+.btn_kirim:focus {
+    color: white !important;
+}
+
+.btn_kirim:disabled {
+    background-color:#808080;
+    color: white !important;
 }
 
 .description {
     color: #8A8A8A;
 }
+
+.modal-content {
+    /* position:fixed;
+    top:auto!;
+    right:auto;
+    left:auto;
+    bottom:0; */
+    top: 100px;
+ } 
