--- a/src/Pages/Register/Register.module.css
+++ b/src/Pages/Register/Register.module.css
@@ -164,7 +164,11 @@ label:focus,
     box-shadow: none !important;
 }
 
-.btn_primary:hover{
+.btn_primary:hover,
+.btn_primary:focus,
+.btn_primary:active,
+.btn_primary:visited
+{
     background-color: #7126B5;
     color: #E2D4F0;
 }
