--- a/src/Components/FormAkun/FormAkun.module.css
+++ b/src/Components/FormAkun/FormAkun.module.css
@@ -2,10 +2,6 @@
     font-family: 'Poppins';
 }
 
-.title{
-    text-align: center;
-    font-size: 16px;
-}
 .fa-arrow-left {
     font-size: 16px;
     color: black;
@@ -47,3 +43,15 @@ option[value=""][disabled] {
     font-size: 14px;
     margin-bottom: 12px;
 }
+
+@media (max-width: 575.98px) { 
+    .back-button {
+        display: none;
+    }
+ }
+
+ @media (max-width: 991.98px) { 
+    .back-button {
+        display: none;
+    }
+ }
