--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -37,11 +37,39 @@
     color: black;
     font-size: 12px;
     height: 39px;
+    margin-left: 14px;
+}
+
+.logout-btn-offcanvas {
+    width: 64px;
+    background-color: #E2D4F0;
+    border: none;
+    border-radius: 12px;
+    color: black;
+    font-size: 12px;
+    height: 39px;
+    margin-top: 10px;
 }
 
 .logout-btn:hover{
     color: white;
     background-color: #7126B5;
+}
+
+.logout-btn-offcanvas:hover{
+    color: white;
+    background-color: #7126B5;
+}
+
+.signin-offcanvas {
+    width: 90px;
+    background-color: #7126B5;
+    border: none;
+    color: white;
+    border-radius: 12px;
+    font-size: 12px;
+    height: 39px;
+    margin-top: 10px;
 }
 
 a {
