--- a/src/Components/Navbar/NavbarPlain.module.css
+++ b/src/Components/Navbar/NavbarPlain.module.css
@@ -3,3 +3,39 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     margin-bottom: 32px;
 }
+
+.navbar-text {
+    position: relative;
+    left: -2%;
+}
+
+@media (max-width: 1024px) {
+    .logo-img {
+      display: none;
+    }
+    .navbar-text{
+        padding-left: 6%;
+    }
+}
+
+@media (max-width: 991.98px) { 
+    .navbar-text {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+    .header {
+        margin-bottom: 12px;
+    }
+} 
+
+@media (max-width: 1024px) { 
+    .navbar-text {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+} 
+
+.fa-arrow-left {
+    font-size: 16px;
+    color: black;
+}
