--- a/src/Components/CardProduk/CardProduk.module.css
+++ b/src/Components/CardProduk/CardProduk.module.css
@@ -1,4 +1,5 @@
 .card-container {
+    text-decoration:none !important;
     flex-direction: column;
     align-items: flex-start;
     padding: 8px 8px 16px;
@@ -12,6 +13,14 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+}
+
+.card-product {
+    text-decoration: none !important;
+}
+
+.card-desc a {
+    text-decoration:none !important;
 }
 
 @media (max-width: 576px) {
