--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -129,23 +129,18 @@
 .btn_primary:visited
 {
     background-color: #7126B5;
-    color: #E2D4F0;
+    color: white !important;
 }
 
 .redirect-text {
     text-decoration: none;
-    color: #7126B5;
+    color: #7126B5 !important;
     font-weight: bolder;
     text-align: center;
 }
 
 .redirect-text:hover {
     color: #7126B5;
-}
-
-.btn_primary:hover{
-    background-color: #7126B5;
-    color: #E2D4F0;
 }
 
 .message-text {
