--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -11,17 +11,17 @@
 
 .btn_primary {
     width: 100%;
-    background-color: #7126B5;
+    background-color: #7126B5 !important;
     border: none;
     border-radius: 12px;
-    color: white;
+    color: white !important;
     font-size: 12px;
     height: 39px;
 }
 
 .btn_primary:hover{
-    color: white;
-    background-color: #7126B5;
+    color: white !important;
+    background-color: #7126B5 !important;
 }
 
 .icons-menu:hover{
@@ -31,10 +31,10 @@
 
 .logout-btn {
     width: 100%;
-    background-color: #E2D4F0;
+    background-color: #E2D4F0 !important;
     border: none;
     border-radius: 12px;
-    color: black;
+    color: black !important;
     font-size: 12px;
     height: 39px;
     margin-left: 14px;
@@ -42,28 +42,28 @@
 
 .logout-btn-offcanvas {
     width: 64px;
-    background-color: #E2D4F0;
+    background-color: #E2D4F0 !important;
     border: none;
     border-radius: 12px;
-    color: black;
+    color: black !important;
     font-size: 12px;
     height: 39px;
     margin-top: 10px;
 }
 
 .logout-btn:hover{
-    color: white;
-    background-color: #7126B5;
+    color: white !important;
+    background-color: #7126B5 !important;
 }
 
 .logout-btn-offcanvas:hover{
-    color: white;
-    background-color: #7126B5;
+    color: white !important;
+    background-color: #7126B5 !important;
 }
 
 .signin-offcanvas {
     width: 90px;
-    background-color: #7126B5;
+    background-color: #7126B5 !important;
     border: none;
     color: white;
     border-radius: 12px;
