--- a/src/Components/Navbar/SecondaryNavbar.module.css
+++ b/src/Components/Navbar/SecondaryNavbar.module.css
@@ -129,7 +129,7 @@ a {
 }
 
 .dropdown-container {
-    margin-inline: -300px !important;
+    /* margin-inline: -150px !important; */
     box-shadow:  0px 0px 15px -5px rgba(0,0,0,0.35)!important;
     border:none;
     max-height: 350px;
