--- a/src/Pages/DaftarJual/DaftarJual.module.css
+++ b/src/Pages/DaftarJual/DaftarJual.module.css
@@ -39,6 +39,7 @@
     border-radius: 12px;
     color: black;
     font-size: 11px;
+
 }
 
 .btn_categories:hover,
@@ -47,9 +48,13 @@
 .btn_categories:visited
 {
     background-color: #7126B5;
-    color: white;
+    color: white !important;
 }
 
+.active-tabs  { 
+    color: orange !important;
+    border-bottom: 1px solid orange;
+  }
 
 @media (max-width: 576px) { 
     .category_wrapper {
