--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,3 +1,18 @@
+.dropdown-container {
+    /* margin-inline: -150px !important; */
+    box-shadow:  0px 0px 15px -5px rgba(0,0,0,0.35)!important;
+    border:none;
+    max-height: 350px;
+    overflow-y: auto;
+    overflow-x: inherit;
+}
+
+.notif-badge{
+    padding: 3px !important;
+    left: 1.5rem;
+    bottom: 1rem;
+}
+
 .nav-header {
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
