--- a/src/Pages/DetailProdukBuyer/DetailProdukBuyer.module.css
+++ b/src/Pages/DetailProdukBuyer/DetailProdukBuyer.module.css
@@ -116,7 +116,21 @@ label:focus,
         margin-right: auto;
         top: 90vh !important;
     }
-    .btn_primary , .btn_edit{
+    .btn_edit_static {
+        width: 72vw;
+        border: 1px solid #7126B5;
+        border-radius: 14px;
+        font-size: 14px;
+        height: 48px;
+        position: sticky;
+        z-index: 300;
+        bottom: 0px !important;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        top: 90vh !important;
+    }
+    .btn_primary, .btn_edit{
         display: none;
     }
 }
